# men-among-gods-reforged

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: auth_extractor.rs  email.rs  helpers.rs  main.rs  password.rs  pipelines.rs  rate_limit.rs  routes.rs
api/src/admin/: auth.rs  mod.rs  routes.rs  routes_badwords.rs  routes_bans.rs  routes_characters.rs  routes_globals.rs  routes_items.rs  routes_map.rs  routes_templates.rs  routes_world_actions.rs  types.rs
api/src/types/: mod.rs
api/tests/: api_integration.py  clear_db.py
client/: Cargo.toml  README.md  build.rs  icon.rc
client/assets/fonts/: license.txt
client/assets/gfx/: .gitignore  NOTES.MD
client/assets/shaders/: color_key.wgsl  dd_effect_sprite.wgsl  magic_postprocess.wgsl
client/src/: account_api.rs  assets_pipeline.rs  cert_trust.rs  constants.rs  dpi_scaling.rs  filepaths.rs  font_cache.rs  game_map.rs  gfx_cache.rs  helpers.rs  hosts.rs  legacy_engine.rs  lib.rs  log.rs  main.rs  map.rs  platform.rs  player_state.rs  preferences.rs  settings.rs  sfx_cache.rs  state.rs
client/src/network/: account_api.rs  client_commands.rs  command.rs  login.rs  mod.rs  server_commands.rs  tick_stream.rs
client/src/scenes/: character_creation.rs  character_selection.rs  enter_reset_code.rs  exit.rs  login.rs  mod.rs  new_account.rs  request_reset.rs  scene.rs
client/src/states/: account_creation.rs  account_login.rs  character_creation.rs  character_selection.rs  exited.rs  gameplay.rs  helpers.rs  loading.rs  logging_in.rs  menu.rs  mod.rs
client/src/systems/: dd_effect_sprite.rs  debug.rs  display.rs  magic_postprocess.rs  map_hover.rs  mod.rs  nameplates.rs  sound.rs
client/src/text/: mod.rs
client/src/types/: controller.rs  log_message.rs  look.rs  mag_files.rs  map.rs  mod.rs  mouse.rs  player_data.rs  save_file.rs  skill_buttons.rs
client/src/ui/: button.rs  button_arc.rs  cert_dialog.rs  character_creation_form.rs  character_selection_form.rs  chat_box.rs  checkbox.rs  controller_nav.rs  delete_character_dialog.rs  dropdown.rs  enter_reset_code_form.rs  hud_button_bar.rs  inventory_panel.rs  keybindings_panel.rs  label.rs  login_form.rs  look_panel.rs  minimap_widget.rs  mod.rs  mode_button.rs  new_account_form.rs  panel.rs  panning_background.rs  quit_confirm_dialog.rs  radio_group.rs  rank_arc.rs  rank_progress_arc.rs  rank_progress_line.rs  rank_sigil.rs  request_reset_form.rs  scrollable_list.rs  settings_panel.rs  shop_panel.rs  skill_bar.rs  skill_picker_popup.rs  skills_panel.rs  slider.rs  status_panel.rs  style.rs  text_input.rs  (+4 more)
client/utils/: Cargo.toml  README.md
core/: Cargo.toml
core/src/: area.rs  ban_action_store.rs  ban_store.rs  byte_operations.rs  character_store.rs  circular_buffer.rs  client_commands.rs  constants.rs  encrypt.rs  item_store.rs  lib.rs  logout_reasons.rs  map_store.rs  names.rs  quest_defs.rs  race.rs  ranks.rs  server_commands.rs  skills.rs  stat_buffer.rs  string_operations.rs  template_store.rs  text_store.rs  traits.rs  weather.rs  weather_areas.rs  world_action_store.rs
core/src/talent_trees/: harakim.rs  mercenary.rs  mod.rs  seyan_du.rs  templar.rs
core/src/types/: api.rs  ban.rs  character.rs  client_player.rs  cmap.rs  cplayer.rs  effect.rs  enums.rs  global.rs  helpers.rs  item.rs  map.rs  mod.rs  see_map.rs  server_player.rs  skilltab.rs
loadtest/: Cargo.toml  loadtest.toml
loadtest/src/: api_bootstrap.rs  config.rs  login_gate.rs  main.rs  metrics.rs  net_impair.rs  protocol.rs  sim_client.rs
sdl_client/: Cargo.toml  README.md  build.rs  icon.rc
sdl_client/src/: account_api.rs  dpi_scaling.rs  filepaths.rs  font_cache.rs  game_map.rs  gfx_cache.rs  helpers.rs  hosts.rs  legacy_engine.rs  main.rs  player_state.rs  preferences.rs  sfx_cache.rs  state.rs
sdl_client/src/network/: client_commands.rs  login.rs  mod.rs  server_commands.rs  tick_stream.rs
sdl_client/src/scenes/: character_creation.rs  character_selection.rs  exit.rs  game.rs  helpers.rs  login.rs  mod.rs  new_account.rs  scene.rs
sdl_client/src/types/: look.rs  look_simple.rs  map.rs  player_data.rs  save_file.rs  skill_buttons.rs
server/: Cargo.toml  Dockerfile
server/original_failed_vc_attempt/src/: constants.rs  god.rs  logging.rs  main.rs  player.rs  player_control.rs  population.rs  profiling.rs  state_mgmt.rs
server/original_source/: skill_driver.cpp  svr_do.cpp
server/sqlite-bench/: Cargo.toml  README.md
server/sqlite-bench/benches/: tick_bench.rs
server/sqlite-bench/src/: lib.rs  main.rs  populate.rs  report.rs  tick_sim.rs
server/sqlite-bench/tests/: integration.rs
server/src/: area.rs  background_saver.rs  character_patch.rs  driver.rs  driver_ccp.rs  driver_generic.rs  driver_skill.rs  driver_special.rs  driver_use.rs  effect.rs  enums.rs  game_loop.rs  game_state.rs  god.rs  helpers.rs  item_patch.rs  keydb.rs  keydb_store.rs  lab9.rs  lib.rs  logging.rs  main.rs  map_patch.rs  network.rs  network_manager.rs  path_finding.rs  pathfinding_service.rs  player.rs  points.rs  populate.rs  profiling.rs  repository.rs  server.rs  single_thread_cell.rs  skilltab.rs  snapshot.rs  state.rs  state_backup.rs  talk.rs  template_reload.rs  (+4 more)
server/src/driver/: ccp.rs  generic.rs  look.rs  mod.rs  npc.rs  skill.rs  special.rs  use_item.rs
server/src/keydb/: background_saver.rs  ban.rs  ban_action.rs  character_patch.rs  connection.rs  item_patch.rs  map_patch.rs  mod.rs  snapshot.rs  store.rs  template_reload.rs  text_reload.rs  world_action.rs
server/src/player/: commands.rs  connection.rs  legacy.rs  lifecycle.rs  map.rs  mod.rs  network.rs  quest_log.rs  talent_tree.rs  talent_trees.rs  tick.rs
server/src/state/: admin.rs  combat.rs  commands.rs  commerce.rs  communication.rs  death.rs  economy.rs  inventory.rs  logging.rs  mod.rs  notifications.rs  player_actions.rs  stats.rs  visibility.rs  weather.rs
server/src/types/: cmap.rs  cplayer.rs  effect.rs  global.rs  (+4 more)
server/utils/: Cargo.toml  Dockerfile  README.md
(+138 files in other folders)
