[workspace]
resolver = "2"
members = [
    "core",
    "client",
    "client/utils",
    "server",
    "server/utils",
    "api",
]

[workspace.package]
version = "1.3.0"

[workspace.dependencies]
anyhow = "1.0.100"
bincode = { version = "2.0", features = ["derive"] }
bitflags = "2.10.0"
flate2 = "1.1.5"
log = "0.4.29"
log4rs = "1.4.0"
rand = "0.8"
redis = "1.0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"

# Build with: `cargo build --profile profiling`
# Goal: mostly-release-like performance while keeping symbols/line info for profilers.
[profile.profiling]
inherits = "release"

# Keep enough debug info for flamegraphs / samples to resolve to lines.
# Use `debug = true` if you want full DWARF (bigger/slower builds).
debug = 2

# Ensure symbols aren't stripped (some tooling relies on them).
strip = "none"

# Prefer more stable perf characteristics for profiling.
codegen-units = 1

# LTO can make profiles harder to interpret; keep it off by default here.
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"
# panic = "abort"
debug = 0
incremental = true
overflow-checks = true
