[package]
name = "api"
version = "1.2.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
axum-governor = "1.0.3"
axum-server = { version = "0.7", features = ["tls-rustls"] }
core = { path = "../core" }
jsonwebtoken = "9.3.1"
lazy-limit = "1.0.3"
lazy_static = "1.5.0"
log = "0.4.29"
real = { version = "0.1.4", features = ["axum"] }
redis = { version = "1.0.3", features = ["aio", "tokio-comp"] }
regex = "1.12.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
rand = "0.8.5"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
subtle = "2.6"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5" }
