[package]
name = "client"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "men-among-gods-client-legacy"
path = "src/main.rs"

[dependencies]
mag_core = { path = "../core", package = "core" }
argon2 = "0.4"
bevy = { version = "0.18", default-features = false, features = ["2d", "wav", "mp3"] }
log = "0.4.29"
tracing-appender = "0.2.4"
zip = "0.6.6"
bevy_egui = "0.39"
egui-file-dialog = "0.12.0"
flate2 = "1.1.5"
tracing = "0.1.44"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winit = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
bevy_framepace = { git = "https://github.com/aevyrie/bevy_framepace", version = "0.21.0" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSDockTile", "NSImage"] }
objc2-foundation = { version = "0.3" }

[build-dependencies]
embed-resource = "2"
