[package]
name = "client"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "men-among-gods-client"
path = "src/main.rs"

[dependencies]
mag_core = { path = "../core", package = "core" }
egui-sdl2 = "0.2.5"
# SDL2 is sourced via cargo-vcpkg and statically linked on all platforms –
# no system SDL2 installation required.
sdl2 = { version = "0.38.0", default-features = false, features = ["gfx", "image", "mixer", "use-vcpkg", "static-link"] }
log = "0.4.29"
log4rs = "1.4.0"
zip = "0.6.6"
flate2 = "1.1.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
argon2 = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
embed-resource = "2"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2026.01.16"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc    = { triplet = "x64-windows-static-md", dependencies = ["sdl2", "sdl2-image", "sdl2-mixer", "sdl2-gfx"] }
x86_64-unknown-linux-gnu  = { triplet = "x64-linux",              dependencies = ["sdl2", "sdl2-image", "sdl2-mixer", "sdl2-gfx"] }
aarch64-unknown-linux-gnu = { triplet = "arm64-linux",            dependencies = ["sdl2", "sdl2-image", "sdl2-mixer", "sdl2-gfx"] }
x86_64-apple-darwin       = { triplet = "x64-osx",                dependencies = ["sdl2", "sdl2-image", "sdl2-mixer", "sdl2-gfx"] }
aarch64-apple-darwin      = { triplet = "arm64-osx",              dependencies = ["sdl2", "sdl2-image", "sdl2-mixer", "sdl2-gfx"] }