[package]
name = "core"
version.workspace = true
edition = "2024"

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
bincode.workspace = true
flate2.workspace = true
log.workspace = true
log4rs.workspace = true
rand.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
