[package]
name = "sdl_client"
version = "0.1.0"
edition = "2021"

[dependencies]
mag_core = { path = "../core", package = "core" }
egui-sdl2 = "0.2.5"
sdl2 = { version = "0.38.0", default-features = false, features = ["gfx", "image", "mixer"] }
log = "0.4.29"
log4rs = "1.4.0"
zip = "0.6.6"
flate2 = "1.1.5"
