[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
libc = "0.2"
nix = { version = "0.27", features = ["signal", "net", "fs", "time"] }
flate2 = "1.0"
chrono = "0.4"
signal-hook = "0.3"
socket2 = "0.5"
bitflags = "2.4"
log = "0.4.29"
rand = "0.8"
