[package]
name = "server"
version.workspace = true
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "world-snapshot"
path = "src/bin/world_snapshot.rs"

[dependencies]
core = { path = "../core" }
flate2.workspace = true
chrono = "0.4"
bitflags.workspace = true
log.workspace = true
bincode.workspace = true
rand.workspace = true
ctrlc = { version = "3.5.1", features = ["termination"] }
redis.workspace = true
dotenvy = "0.15"
rustls = { workspace = true, default-features = true }
rustls-pemfile.workspace = true
