[package]
name = "sqlite-bench"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "SQLite in-memory latency benchmark — evaluates SQLite as a potential replacement for .dat files"

# Standalone workspace — keeps rusqlite/libsqlite3-sys out of the main workspace.
[workspace]

[dependencies]
mag_core = { path = "../../core", package = "core" }
rusqlite = { version = "0.32", features = ["bundled"] }
bincode = { version = "2.0", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tick_bench"
harness = false
