[package]
name = "server-utils"
version = "1.1.0"
edition = "2024"
publish = false
license = "MIT"
description = "Utility executables for the server"

[dependencies]
mag_core = { path = "../../core", package = "core" }
server = { path = "../" }
eframe = "0.30"
egui = "0.30"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
zip = "0.6.6"
image = { version = "0.25", default-features = false, features = ["png"] }
bincode = { version = "2.0", features = ["derive"] }
anyhow = "1.0"
redis = "1.0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

[[bin]]
name = "template_viewer"
path = "src/bin/template_viewer.rs"

[[bin]]
name = "map_viewer"
path = "src/bin/map_viewer.rs"

[[bin]]
name = "mag-admin"
path = "src/bin/mag_admin.rs"


