[package]
name = "server-utils"
version.workspace = true
edition = "2024"
publish = false
license = "MIT"
description = "Utility executables for the server"

[dependencies]
mag_core = { path = "../../core", package = "core" }
server = { path = "../" }
eframe = "0.30"
egui = "0.30"
rfd = "0.15"
log.workspace = true
env_logger = "0.11"
zip.workspace = true
image = { version = "0.25", default-features = false, features = ["png"] }
bincode.workspace = true
anyhow.workspace = true
redis.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"

[[bin]]
name = "template_viewer"
path = "src/bin/template_viewer.rs"

[[bin]]
name = "map_viewer"
path = "src/bin/map_viewer.rs"

[[bin]]
name = "mag-admin"
path = "src/bin/mag_admin.rs"


